# punkst

./: .dockerignore  .gitignore  .gitmodules  404.html  CMakeLists.txt  Dockerfile  README.md  index.html  layout.h  mkdocs.yml  pointcloud.proto  punkst.cpp  punkst.h  sitemap.xml  test.cpp
basic/: index.html
blog/: index.html
cimg/: README.txt
docs/: basic.md  index.md  install.md
docs/examples/: basic.md
docs/examples/basic/: Makefile  config.json
docs/input/: geojson-region.md  index.md
docs/javascripts/: mathjax.js
docs/modules/: coexp.md  de.md  gammapois.md  index.md  lda4hex.md  other.md  pixel-decode.md  pmtiles.md  poisnmf.md  pts2tiles.md  tileop.md  tiles2hex.md  tiles2rois.md  topic_eval.md  visualization.md
docs/workflows/: basics.md  deploy_carto.md  index.md  multisample.md
examples/basic/: Makefile  config.json  index.html
examples/basic/generic/: Makefile  config.json
examples/basic/merscope/: Makefile1  config.json
examples/format_input/cosmx/: Makefile  config_prepare.json
examples/format_input/merscope/: Makefile  Makefile0  Makefile1  config.json  config_prepare.json
examples/format_input/xenium/: Makefile  Makefile0  Makefile1  config.json  config_prepare.json
examples/projection/: Makefile  config.json
examples/with_cell_centers/: Makefile  config.json
ext/nanoflann/: nanoflann_utils.h
ext/py/: cmap.256.tsv  cmap.48.tsv  color_helper.py  convert_tiff_for_image2pmtiles.py  de_bulk.py  factor_report.py  generate_workflow.py
input/: index.html
input/geojson-region/: index.html
install/: index.html
modules/: index.html
modules/coexp/: index.html
modules/de/: index.html
modules/gammapois/: index.html
modules/lda4hex/: index.html
modules/other/: index.html
modules/pixel-decode/: index.html
modules/pmtiles/: index.html
modules/poisnmf/: index.html
modules/pts2tiles/: index.html
modules/tileop/: index.html
modules/tiles2hex/: index.html
modules/tiles2rois/: index.html
modules/topic_eval/: index.html
modules/visualization/: index.html
nanoflann/: nanoflann_utils.h
script/: annotate_sb_tsv.cpp  btiles2hex.cpp  build_pyramid.cpp  cells2pmtiles.cpp  cluster_gampois.cpp  coloc2markers.cpp  convert_dge.cpp  coocurrence.cpp  de_chisq.cpp  deploy_cartoscope.cpp  draw_lowres_factors.cpp  draw_pixel_factors.cpp  draw_pixel_genes.cpp  draw_tsv_by_col.cpp  export_pmtiles.cpp  factor_eval_common.cpp  factor_eval_common.hpp  factor_eval_naive.cpp  factor_evaluation.cpp  feature_selection.cpp  fit_gamma_pois.cpp  fit_gampois.cpp  fit_gampois_jc.cpp  fit_hdp.cpp  fit_lda.cpp  fit_nmf.cpp  gene_bins.cpp  hex2pmtiles.cpp  hex2pmtiles_mlt.cpp  image2pmtiles.cpp  image_output_disabled.cpp  lda_training.cpp  manipulate_tiles.cpp  merge_units.cpp  multi_cde_lowres.cpp  multi_cde_lowres_common.cpp  multi_cde_lowres_common.hpp  multi_cde_lowres_nb.cpp  multi_cde_pixel.cpp  multi_cde_pixel_common.cpp  (+25 more)
search/: search_index.json
src/: bccgrid.hpp  cndtest.hpp  commands.hpp  concurrent_matrix.hpp  concurrent_tree.cpp  concurrent_tree.hpp  cosine_clustering.cpp  cosine_clustering.hpp  dataunits.cpp  dataunits.hpp  de_chisq.cpp  dense_kmeans.cpp  dense_kmeans.hpp  dynamic_matrix.hpp  eb_topic_activity.hpp  error.hpp  factor_polygon_pmtiles.cpp  factor_polygon_pmtiles.hpp  flex_io.cpp  flex_io.hpp  gamma_pois_cluster.cpp  gamma_pois_cluster.hpp  gamma_pois_cluster_candidates.cpp  gamma_pois_cluster_covariance.cpp  gamma_pois_cluster_expectation.cpp  gamma_pois_cluster_fit.cpp  gamma_pois_cluster_internal.hpp  gamma_pois_cluster_svi.cpp  gamma_pois_dispersion.cpp  gamma_pois_dispersion.hpp  gamma_pois_posterior_io.cpp  gamma_pois_posterior_io.hpp  gamma_pois_structured_cluster.cpp  gamma_pois_topic.cpp  gamma_pois_topic.hpp  gene_bin_utils.hpp  geometry_utils.hpp  glm.cpp  glm.hpp  hdp.cpp  (+98 more)
src/clustering/: gamma_pois_cluster.cpp  gamma_pois_cluster.hpp  gamma_pois_cluster_candidates.cpp  gamma_pois_cluster_covariance.cpp  gamma_pois_cluster_expectation.cpp  gamma_pois_cluster_fit.cpp  gamma_pois_cluster_internal.hpp  gamma_pois_cluster_svi.cpp  low_rank_covariance.cpp  low_rank_covariance.hpp  uac.cpp  uac.hpp
src/clustering_core/: cosine_clustering.cpp  cosine_clustering.hpp  dense_kmeans.cpp  dense_kmeans.hpp  knn.cpp  knn.hpp  knn_internal.hpp  leiden.cpp  leiden.hpp
workflows/: index.html
workflows/basics/: index.html
workflows/deploy_carto/: index.html
workflows/multisample/: index.html
